# nettopp-mnemona

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yml  nettopp-mnemona..code-workspace  nettopp-mnemona.code-workspace
.github/workflows/: build-deploy.yml  deploy-dev.yml  deploy-prod.yml  tests.yml
backend/: .dockerignore  .env.dev  .env.template  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 2023_01_28_2001-a85c6e0f9e69_init.py
backend/src/mnemona/: config.py  main.py
backend/src/mnemona/database/: _setup.py
backend/src/mnemona/database/logic/: __init__.py
backend/src/mnemona/database/models/: __init__.py  card.py  deck.py  user.py
backend/src/nfb/: config.py  main.py
backend/src/nfb/database/: __init__.py  _setup.py
backend/src/nfb/database/logic/: __init__.py
backend/src/nfb/database/models/: __init__.py
frontend/: .env  .gitignore  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  Auth.tsx  auth.ts  config.ts  main.tsx
frontend/src/components/: Login.tsx  Root.jsx
frontend/src/dataAccess/: auth.ts  utils.ts
